Minor colour update for nightshift See https://github.com/TryGhost/Ghost/issues/8715

--- a/ghost/admin/app/styles/app-dark.css
+++ b/ghost/admin/app/styles/app-dark.css
@@ -259,7 +259,7 @@ input,
 }
 
 .gh-logo {
-    filter: invert(100%);
+    filter: invert(100%) brightness(150%);
 }
 
 .gh-canvas-title span path {
